
	ns_logctl severities lists all created severites.

	* nsd/callbacks.c:
	* nsd/tclinit.c: Update after renaming Ns_LogLevel() to
	Ns_LogSeverityEnabled().

	* doc/src/mann/ns_log.man:
	* tests/ns_log.test: Updated.

	* nsd/log.c: Call filters 'filters' instead of callbacks. Remove some
	redundant wrapper routines. Shuffle the code around.

2007-09-12  Stephen Deasey  <sdeasey@users.sf.net>

	* doc/src/mann/ns_log.man:
	* doc/src/ns_log.man:
	* doc/src/ns_logctl.man:
	* doc/src/ns_logroll.man: Combine the error logging commands and move
	into place. Update.

	* nsd/nsmain.c (CmdThread): Set the thread name for the command shell
	thread so that log messages are less ugly.

2007-09-11  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/nsd.h:
	* nsd/tclresp.c: Re-enable the ability to use ns_write to manually
	construct headers or some other non-HTTP response. It does not now
	auto-generate a set of headers on first write -- ns_headers must be
	called first.

	* doc/src/mann/ns_return.man:
	* doc/src/mann/ns_write.man: Split ns_write, ns_headers and
	ns_connsendfp into their own man page, the distinction being that the
	all construct responses incrementally whereas ns_return, ns_respond,
	ns_returnfile and ns_returnfp return a fully formed HTTP response.

	* tests/tclresp.test: Test the headers/no-headers case for ns_write and
	ns_startcontent.

	* nslog/nslog.c (LogFlush): Remove redundant and annoying error logging
	when a log-flush fails due to a previous error rolling and re-opening
	the file. Shuffle some code around to put public API at the top of the
	file.

	* doc/src/ns_accesslog.man:
	* doc/src/mann/ns_accesslog.man: Update and move.

	* nslog/nslog.c: Fix mix-up with static/dynamic memory and the result
	from the [ns_accesslog file] command.

	* nslog/nslog.c: Remove redundant embedded documentation.

	* nslog/nslog.c (LogObjCmd): Fix inconsistent use of CamelCase in return
	value of [ns_accesslog flags] command.
