@@ -50,10 +50,10 @@ test ns_log-3.3 {severity} -body {
     ns_logctl get
 } -match glob -result "* Error: test\n"
 
-test ns_log-3.4 {severity} -body {
+test ns_log-3.4 {severity fata never held} -body {
     ns_log fatal test
     ns_logctl get
-} -match glob -result "* Fatal: test\n"
+} -result {}
 
 test ns_log-3.5 {severity} -body {
     ns_log bug test
